# momentum-ia

./: .env.test  .gitignore  .mcp.json  config.py  explanation.md  health.py  logger.py  main.py  pyproject.toml  test_agent.py  test_new_schema.py  test_webhook.py  test_workflow.py
apis/: whatsapp.py
services/: agent_tools.py  agents.py
services/tools/: communication_tools.py  database_tools.py  verification_tools.py
